Add gh-pages for deploy project. Changed some files to display correctly.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -140,7 +140,7 @@ html {
       left: 0;
       width: 1.2em;
       height: 1.2em;
-      background-image: url(/images/checked.svg);
+      background-image: url(/react-todo/images/checked.svg);
       background-position: center center;
       background-repeat: no-repeat;
       opacity: 0;
